@@ -1,7 +1,9 @@
+TAG: littriageload-6-0-25-12
 TAG: littriageload-6-0-25-11
 DATE: 05/06/2025
 STAFF: lec
 change tar of INPUTDIR -> cp -r
+change for/mv of PUBLISHEDDIR -> rsync
 
 TAG: littriageload-6-0-25-10
 DATE: 05/01/2025
